Fix right border gap issue

--- a/css/mddevice-index.css
+++ b/css/mddevice-index.css
@@ -14,7 +14,7 @@
   .col {
     border: 1px solid lightgray;
     font-size: 2rem;
-    max-width: 14.1% !important;
+    max-width: 14.2% !important;
   }
 
   .row.header {
